# findmytau

./: README.md  pyproject.toml  setvars.sh
src/findmytau/: main.py  sde.py
